Clean up Maven structure part 1 (#237)
* [Build] Format, re-order and clean-up POMs (#193)

- Format all pom.xml files
- update xsi:schemaLocation
- Change the order of elements to comply with the order recommended by
Maven:
https://maven.apache.org/developers/conventions/code.html#pom-code-convention

To sort the pom elements, use the following command (with subsequent
Eclipse XML-editor formatting:

"mvn com.github.ekryd.sortpom:sortpom-maven-plugin:sort
-Dsort.createBackupFile=false -Dsort.nrOfIndentSpace=-1
-Dsort.indentSchemaLocation=true -Dsort.sortPlugins=groupId,artifactId
-Dsort.sortDependencies=scope,groupId,artifactId"

* [Build] improve plug-in management and update plug-in versions (#193)

- Remove resource filtering where no resources are filtered at all or
where the resources did not contain any replaceable variables. Which in
the end were all occurrences.

- Make explicit call of maven-compiler-plugin in the root pom.xml, which
is implicitly called anyways and remove it from child poms.

* [Build] generated java-doc and source for all modules regularly (#193)

* [Build] improve dependency management (#193)

- versions of each dependency is now managed in the dependencyManagement
section of the root pom.xml
	- this ensures consistent versions throughout the library

- Add JUnit 5 test-dependency (plus Vintage for Junit4) for all modules
in test scope

* [Build] remove dependency jars and .classpath and lock snapshots (#193)

Dependencies are handled by Maven automatically, there is no need to add
and manage the jars manually. Furthermore they are not even considered
by Maven. This can lead to inconsistencies between the build and the
IDE.

This allows also to remove the Eclipse .classpath file from the
symja_android_library module since that file is generated automatically
when the Maven-project is imported and it is required.

Also lock the snapshot dependencies in order to avoid compilation errors
if t

--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.matheclipse</groupId>
 		<artifactId>matheclipse</artifactId>
@@ -22,168 +23,146 @@
 	</licenses>
 
 	<dependencies>
+
 		<dependency>
-			<groupId>org.matheclipse</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>matheclipse-external</artifactId>
-			<version>${symja.version}</version>
+			<version>${project.version}</version>
 		</dependency>
+
 		<dependency>
-			<groupId>org.matheclipse</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>matheclipse-frontend</artifactId>
-			<version>${symja.version}</version>
+			<version>${project.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.commonmark</groupId>
 			<artifactId>commonmark</artifactId>
-			<version>0.17.2</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.commonmark</groupId>
 			<artifactId>commonmark-ext-gfm-tables</artifactId>
-			<version>0.17.2</version>
 		</dependency>
+
 		<!-- <dependency> <groupId>de.uni-mannheim.rz.krum</groupId> <artifactId>jas</artifactId> 
 			<version>2.6.6025</version> </dependency> -->
+
 		<dependency>
 			<groupId>org.apfloat</groupId>
 			<artifactId>apfloat</artifactId>
-			<version>1.10.1-SNAPSHOT</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.13.2</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			<version>2.13.2</version>
 		</dependency>
+
 		<!-- see github issues #63 -->
 		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-android</artifactId> 
 			<version>1.7.25</version> </dependency> -->
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.25</version>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>log4j-over-slf4j</artifactId>
-			<version>1.7.25</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.hipparchus</groupId>
 			<artifactId>hipparchus-core</artifactId>
-			<version>${hipparchus.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.hipparchus</groupId>
 			<artifactId>hipparchus-clustering</artifactId>
-			<version>${hipparchus.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.hipparchus</groupId>
 			<artifactId>hipparchus-fft</artifactId>
-			<version>${hipparchus.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.hipparchus</groupId>
 			<artifactId>hipparchus-fitting</artifactId>
-			<version>${hipparchus.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.hipparchus</groupId>
 			<artifactId>hipparchus-ode</artifactId>
-			<version>${hipparchus.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.hipparchus</groupId>
 			<artifactId>hipparchus-optim</artifactId>
-			<version>${hipparchus.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.hipparchus</groupId>
 			<artifactId>hipparchus-stat</artifactId>
-			<version>${hipparchus.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>1.14</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.11</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-csv</artifactId>
-			<version>1.4</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.google.code.findbugs</groupId>
 			<artifactId>jsr305</artifactId>
-			<version>3.0.0</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.logicng</groupId>
 			<artifactId>logicng</artifactId>
-			<version>2.0.2</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.gavaghan</groupId>
 			<artifactId>geodesy</artifactId>
-			<version>1.1.3</version>
 		</dependency>
+
 		<dependency>
 			<groupId>it.unimi.dsi</groupId>
 			<artifactId>fastutil</artifactId>
-			<version>8.5.2</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.codehaus.janino</groupId>
 			<artifactId>janino</artifactId>
-			<version>3.1.4</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>icu4j</artifactId>
-			<version>68.2</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.univocity</groupId>
 			<artifactId>univocity-parsers</artifactId>
-			<version>2.8.4</version>
 		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.4.2</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.4.2</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.vintage</groupId>
-			<artifactId>junit-vintage-engine</artifactId>
-			<version>5.4.2</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
 
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-	</build>
+	</dependencies>
 </project>
