--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -42,6 +42,7 @@
 		<module>matheclipse-api</module>
 		<module>matheclipse-io</module>
 		<module>matheclipse-beakerx</module>
+		<module>matheclipse-discord</module>
 	</modules>
 
 	<scm>
@@ -286,43 +287,43 @@
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-clustering</artifactId>
-				<version>2.0-20210722.191908-56</version>
+				<version>2.0-20210727.203307-57</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-core</artifactId>
-				<version>2.0-20210722.191816-56</version>
+				<version>2.0-20210727.203216-57</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fft</artifactId>
-				<version>2.0-20210722.191919-56</version>
+				<version>2.0-20210727.203319-57</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fitting</artifactId>
-				<version>2.0-20210722.191901-56</version>
+				<version>2.0-20210727.203300-57</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-ode</artifactId>
-				<version>2.0-20210722.191845-56</version>
+				<version>2.0-20210727.203244-57</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-optim</artifactId>
-				<version>2.0-20210722.191853-56</version>
+				<version>2.0-20210727.203252-57</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-stat</artifactId>
-				<version>2.0-20210722.191827-56</version>
+				<version>2.0-20210727.203225-57</version>
 			</dependency>
 
 			<dependency>
@@ -358,13 +359,13 @@
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>log4j-over-slf4j</artifactId>
-				<version>1.7.25</version>
+				<version>1.7.32</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-simple</artifactId>
-				<version>1.7.25</version>
+				<version>1.7.32</version>
 			</dependency>
 
 		</dependencies>
