--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -41,7 +41,7 @@
 		<module>matheclipse-gpl</module>
 		<module>matheclipse-api</module>
 		<module>matheclipse-io</module>
-	<!--	<module>matheclipse-jar</module> -->
+		<!-- <module>matheclipse-jar</module> -->
 		<module>matheclipse-beakerx</module>
 		<module>matheclipse-discord</module>
 	</modules>
@@ -288,43 +288,43 @@
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-clustering</artifactId>
-				<version>2.0-20210730.210325-58</version>
+				<version>2.0</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-core</artifactId>
-				<version>2.0-20210730.210246-58</version>
+				<version>2.0</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fft</artifactId>
-				<version>2.0-20210730.210334-58</version>
+				<version>2.0</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-fitting</artifactId>
-				<version>2.0-20210730.210319-58</version>
+				<version>2.0</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-ode</artifactId>
-				<version>2.0-20210730.210307-58</version>
+				<version>2.0</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-optim</artifactId>
-				<version>2.0-20210730.210313-58</version>
+				<version>2.0</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.hipparchus</groupId>
 				<artifactId>hipparchus-stat</artifactId>
-				<version>2.0-20210730.210253-58</version>
+				<version>2.0</version>
 			</dependency>
 
 			<dependency>
