Name and description in pom.xml

--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -12,7 +12,9 @@
 
 	<artifactId>matheclipse-core</artifactId>
 	<packaging>jar</packaging>
-
+	<name>${project.groupId}:${project.artifactId}</name>
+	<description>The Symja core module</description>
+	
 	<licenses>
 		<license>
 			<name>GNU Lesser General Public License, Version 3</name>
