--- a/symja_android_library/matheclipse-gpl/pom.xml
+++ b/symja_android_library/matheclipse-gpl/pom.xml
@@ -12,6 +12,8 @@
 
 	<artifactId>matheclipse-gpl</artifactId>
 	<packaging>jar</packaging>
+	<name>${project.groupId}:${project.artifactId}</name>
+	<description>The Symja gpl module</description>
 
 	<licenses>
 		<license>
