--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -44,7 +44,7 @@
 		<module>matheclipse-gpl</module>
 		<module>matheclipse-api</module>
 		<module>matheclipse-io</module>
-		<!-- <module>matheclipse-jar</module> -->
+	    <module>matheclipse-jar</module> 
 		<module>matheclipse-beakerx</module>
 		<module>matheclipse-discord</module>
 	</modules>
