--- a/symja_android_library/matheclipse-jar/pom.xml
+++ b/symja_android_library/matheclipse-jar/pom.xml
@@ -31,7 +31,6 @@
 			<artifactId>matheclipse-io</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -49,6 +48,7 @@
 							<image>registry.hub.docker.com/symja/symja-2.0</image>
 						</to>
 						<container>
+							<creationTime>USE_CURRENT_TIMESTAMP</creationTime>
 							<mainClass>org.matheclipse.io.servlet.ServletServer</mainClass>
 							<ports>
 								<port>8080</port>
