--- a/symja_android_library/matheclipse-api/pom.xml
+++ b/symja_android_library/matheclipse-api/pom.xml
@@ -57,6 +57,20 @@
 			<artifactId>encoder</artifactId>
 		</dependency>
 
+		<!-- logging dependencies -->
+
+		<dependency> <!-- provide the logging-framework implementation -->
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency> <!-- bind slf4j to log4j-2-core -->
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
