[Core] require only fastutil-core 8.5.4 for matheclipse-core
The dependency it.unimi.dsi:fastuil is quite large using 22.4MB of
disk-space.

Since version 8.5.4, fastutil is split into three module fastutil-core,
fastutil-extra and fastutil (where each jar depends on the previus one).
The jar of the module fastutil-core in contrast requires only 5.4MB of
disk-space. To make applications of users that only require
matheclipse-core smaller, matheclipse-core it is adjusted to only
require fastutil-core.

--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -110,8 +110,9 @@
 		</dependency>
 
 		<dependency>
+			<!-- require only the smallest fastuil module -->
 			<groupId>it.unimi.dsi</groupId>
-			<artifactId>fastutil</artifactId>
+			<artifactId>fastutil-core</artifactId>
 		</dependency>
 
 		<dependency>
