--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -179,7 +179,13 @@
 			<dependency>
 				<groupId>it.unimi.dsi</groupId>
 				<artifactId>fastutil</artifactId>
-				<version>8.5.2</version>
+				<version>8.5.4</version>
+			</dependency>
+
+			<dependency>
+				<groupId>it.unimi.dsi</groupId>
+				<artifactId>fastutil-core</artifactId>
+				<version>8.5.4</version>
 			</dependency>
 
 			<dependency>
