--- a/symja_android_library/log4j2.properties
+++ b/symja_android_library/log4j2.properties
@@ -5,7 +5,7 @@ status = error
 #nok: dest = file://test/log.log
 name = SymjaPropertiesConfig
 
-appenders = console, consoleErr, rolling
+appenders = console, consoleErr
 
 # appender for standard console
 appender.console.type = Console
@@ -27,25 +27,7 @@ appender.consoleErr.layout.pattern = %-4r %-5p [%t] %c - %m%n
 appender.consoleErr.filter.threshold.type = ThresholdFilter
 appender.consoleErr.filter.threshold.level = error
 
-# appender for files
-appender.rolling.type = RollingFile
-appender.rolling.name = RollingFile
-appender.rolling.fileName = symja.log
-appender.rolling.filePattern = symja-%d{MM-dd-yy-HH-mm-ss}-%i.log
-appender.rolling.append = true
-appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern = %-4r [%t] %-5p %c - %m%n
-appender.rolling.policies.type = Policies
-appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
-appender.rolling.policies.time.interval = 2
-appender.rolling.policies.time.modulate = true
-appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
-appender.rolling.policies.size.size=100MB
-appender.rolling.strategy.type = DefaultRolloverStrategy
-appender.rolling.strategy.max = 5
-
 # configure root logger
 rootLogger.level = warn
 rootLogger.appenderRef.stdout.ref = STDOUT
 rootLogger.appenderRef.errout.ref = ERROUT
-rootLogger.appenderRef.rolling.ref = RollingFile
