[Logging] use Loggers to log messages: replace System.out/err(#272)
Log messages to System.out to LOGGER.info() and messages to System.err
LOGGER.error().

Ignore test classes and top-level console-application-like classes.

--- a/symja_android_library/matheclipse-frontend/pom.xml
+++ b/symja_android_library/matheclipse-frontend/pom.xml
@@ -24,4 +24,15 @@
 		</license>
 	</licenses>
 
+	<dependencies>
+
+		<!-- logging dependencies -->
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+		</dependency>
+
+	</dependencies>
+
 </project>
