[Logging] Appender to add log-messages to PrintStream in Servlets (#272)

--- a/symja_android_library/matheclipse-logging/src/main/resources/log4j2.properties
+++ b/symja_android_library/matheclipse-logging/src/main/resources/log4j2.properties
@@ -5,7 +5,9 @@ status = error
 #nok: dest = file://test/log.log
 name = SymjaPropertiesConfig
 
-appenders = console, consoleErr
+packages = org.matheclipse.logging
+
+appenders = console, consoleErr, threadLocal
 
 # appender for standard console
 appender.console.type = Console
@@ -27,7 +29,11 @@ appender.consoleErr.layout.pattern = %-4r %-5p [%t] %c - %m%n
 appender.consoleErr.filter.threshold.type = ThresholdFilter
 appender.consoleErr.filter.threshold.level = error
 
+appender.threadLocal.type = ThreadLocalNotifier
+appender.threadLocal.name = THREAD_LOCAL_NOTIFIER
+
 # configure root logger
-rootLogger.level = warn
+rootLogger.level = info
 rootLogger.appenderRef.stdout.ref = STDOUT
 rootLogger.appenderRef.errout.ref = ERROUT
+rootLogger.appenderRef.threadLocal.ref = THREAD_LOCAL_NOTIFIER
