--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -47,6 +47,7 @@
 		<module>matheclipse-jar</module>
 		<module>matheclipse-beakerx</module>
 		<module>matheclipse-discord</module>
+		<module>matheclipse-logging</module>
 	</modules>
 
 	<scm>
@@ -418,12 +419,6 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-source-plugin</artifactId>
 					<version>3.2.1</version>
-				</plugin>
-
-				<plugin>
-					<groupId>org.codehaus.mojo</groupId>
-					<artifactId>build-helper-maven-plugin</artifactId>
-					<version>3.2.0</version>
 				</plugin>
 
 				<plugin>
