[Logging] fix logger calls in IOFunctions and add comments to log-config

--- a/symja_android_library/matheclipse-logging/src/main/resources/log4j2.properties
+++ b/symja_android_library/matheclipse-logging/src/main/resources/log4j2.properties
@@ -5,6 +5,7 @@ status = error
 #nok: dest = file://test/log.log
 name = SymjaPropertiesConfig
 
+# package containing the ThreadLocalNotifyingAppender
 packages = org.matheclipse.logging
 
 appenders = console, consoleErr, threadLocal
