set default log level to warn

--- a/symja_android_library/matheclipse-logging/src/main/resources/log4j2.properties
+++ b/symja_android_library/matheclipse-logging/src/main/resources/log4j2.properties
@@ -34,7 +34,7 @@ appender.threadLocal.type = ThreadLocalNotifier
 appender.threadLocal.name = THREAD_LOCAL_NOTIFIER
 
 # configure root logger
-rootLogger.level = info
+rootLogger.level = warn
 rootLogger.appenderRef.stdout.ref = STDOUT
 rootLogger.appenderRef.errout.ref = ERROUT
 rootLogger.appenderRef.threadLocal.ref = THREAD_LOCAL_NOTIFIER
