--- a/symja_android_library/matheclipse-io/pom.xml
+++ b/symja_android_library/matheclipse-io/pom.xml
@@ -83,6 +83,11 @@
 			<artifactId>poi-ooxml</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.biojava</groupId>
+			<artifactId>biojava-core</artifactId>
+		</dependency>
+		
 		<!-- logging dependencies -->
 
 		<dependency>
