--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -288,6 +288,12 @@
 				<version>0.9.17</version>
 			</dependency>
 
+			<dependency>
+				<groupId>org.biojava</groupId>
+				<artifactId>biojava-core</artifactId>
+				<version>6.0.0</version>
+			</dependency>
+			
 			<!-- logging dependencies -->
 
 			<dependency>
