--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -293,6 +293,11 @@
 				<artifactId>biojava-core</artifactId>
 				<version>6.0.0</version>
 			</dependency>
+			<dependency>
+				<groupId>org.biojava</groupId>
+				<artifactId>biojava-alignment</artifactId>
+				<version>6.0.0</version>
+			</dependency>
 			
 			<!-- logging dependencies -->
 
