#334 Use RRB-Tree from Paguro
- define Config.MIN_LIMIT_PERSISTENT_LIST = 32
  as limit where to switch to Paguro shared structures collection
- define ASTRRBTree with interface IAST from Paguro RRB-Tree list
- define ASTAssociation from Paguro ImMap, MutMap, RRB-Tree list

--- a/symja_android_library/matheclipse-core/pom.xml
+++ b/symja_android_library/matheclipse-core/pom.xml
@@ -42,7 +42,7 @@
 			<groupId>de.uni-mannheim.rz.krum</groupId>
 			<artifactId>jas</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apfloat</groupId>
 			<artifactId>apfloat</artifactId>
@@ -112,6 +112,11 @@
 		<dependency>
 			<groupId>com.univocity</groupId>
 			<artifactId>univocity-parsers</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.organicdesign</groupId>
+			<artifactId>Paguro</artifactId> 
 		</dependency>
 
 		<!-- logging dependencies -->
