--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.matheclipse</groupId>
@@ -353,10 +351,6 @@
 
 	</dependencies>
 
-	<!-- <repositories> <repository> <id>orekit</id> <url>https://packages.orekit.org/repository/maven-public/</url> 
-		</repository> <repository> <id>sonatype</id> <url>https://oss.sonatype.org/content/groups/public/</url> 
-		</repository> </repositories> -->
-
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -480,11 +474,6 @@
 						<serverId>sonatype-oss-staging</serverId>
 					</configuration>
 				</plugin>
-
-				<!-- <plugin> <groupId>com.google.cloud.tools</groupId> <artifactId>jib-maven-plugin</artifactId> 
-					<version>2.7.0</version> <configuration> <to> <image>servletserver</image> 
-					</to> <container> <mainClass>org.matheclipse.io.servlet.ServletServer</mainClass> 
-					</container> </configuration> </plugin> -->
 
 			</plugins>
 		</pluginManagement>
