--- a/symja_android_library/pom.xml
+++ b/symja_android_library/pom.xml
@@ -54,6 +54,7 @@
 		<module>matheclipse-io</module>
 		<module>matheclipse-discord</module>
 		<module>matheclipse-logging</module>
+		<module>matheclipse-script</module>
 
 	</modules>
 
